fix the problems with display alignment
fixing it by using flexblox and adding wrapper

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,180 +1,152 @@
 body {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: #BFE9FF;
-    
-}
-.default-card{
-    width: 300px;
-    height: 400px;
-    border-radius: 25px;
-    background-color: #FFFFFF;
-}
-.small-square-button{
-    width:50px;
-    height:50px;
-    border-radius: 10px;
-    border: none;
-}
-#logo{
-    font-weight: bold;
+    background-color: #ffffff;
     justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+
+#header{
+    width: 100%; 
+    height: 100%; 
+    background: #8898E0; 
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+}
+
+#head-text{
     text-align: center;
-    margin-left: 45%;
+    font-size: 55px;
+    margin-top: 0;
+    color: white;
+    font-family: 'Palanquin Dark', sans-serif;
+    word-wrap: break-word;
 }
 
-.dirt{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 60px; 
-    background-color: #6e421a; 
-    justify-content: center;
-    display: flex;
-}
-
-.grass{
-    position: fixed;
-    bottom: 60px;
-    left: 0;
-    width: 100%;
-    height: 40px; 
-    background-color: #5dbd39; 
-    justify-content: center;
-    display: flex;
-    
-}
-
-/* navigator header*/
-nav {
-    background-color: #FFC300;
-    display:flex;
-    /*justify-content: center;*/
-    margin:0
-}
-
-nav p{
-    justify-content: center;
-    text-align: center;
-}
-
-#add-deck {
-    position:absolute; 
-    right:80px; 
-    top:20px;
-}
-
-/*Return Button*/
-#return-button{
-    font-size: 25px;
-    font-weight: bold;
-    background: none; 
-    border: none; 
-    margin-left: 1%;
-    cursor: pointer;
-}
-#return-button:hover{
-    color: gray;
-}
-
-/*main display-screen showing deck choosing before start*/
-#main__display--deckchooser--wrapper {
-    display:flex;
-    justify-content: center;
-}
-#main__display--deck {
-    background-color: #FFFFFF;
-    display:flex;
-}
-#main__display--deck span {
+.Main-Box{
     margin: auto;
+    margin-top: 50px;
+    width: 75%;
+    height: 75%;
+    padding: 10px;
+    background: #D3DBFF;
+  }
+
+
+#Main-Display{
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    justify-content: center;
+    margin: auto;
+    margin-left: 6.5%;
 }
-#main__display--buttonleft {
-    flex:0 0 auto;
-    margin:auto 15px;
-    width:50px;
+
+#Holder{
+    display:flex;
+    width: 80%; 
+    height:500px; 
+    justify-content: center;
+}
+
+#Button-Holder{
+    display:inline-block;
+    z-index: 1;
+    width: 80%; 
+    height: 116px;  
+    background: #FEFEFE; 
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
+    border-radius: 23px;
+    text-align: center;
+    justify-content: center;
+    margin: 20px;
+}
+
+#Main-Box{
+    width: 100%; 
+    height: 100%; 
+    display:flex;
+    flex-direction: column; 
+    background: #D3DBFF; 
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    justify-content: center;
+}
+
+#Deck-Select{
+    z-index: 0; 
+    text-align: center; 
+    color: black; font-size: 400%; 
+    font-family:  Palanquin Dark;
+    font-weight: 400; 
+    word-wrap: break-word;
+}
+
+#Actions{
     height: 100px;
-    background-color: #ffae00;
-    
-}
-#main__display--buttonright {
-    flex:0 0 auto;
-    margin:auto 15px;
-    width:50px;
-    height: 100px;
-    background-color: #ffae00;
-}
-#main__display--buttonselect-deck {
-    background-color: rgb(129, 202, 129);
-    flex: 0 0 auto;
-    margin:15px;
-    width:200px;
-    height: 30px;
-    cursor: pointer;
-}
-
-/*main display-screen showing question*/
-#main__toolbar--createdeck {
-    margin:auto;
-
-}
-
-#main__wrapper {
-    display: block;
-    text-align: center;
-    margin: 50px;
-}
-#main__display--screen {
-    display:none;
-}
-
-#main__display--cardplay {
     display: flex;
     justify-content: center;
-    border: 12px solid black;
-    border-left: 0px;
-    border-top: 0px;
-    border-radius: 25px;
-    height: 500px;
-    width: 720px;
-    background-color: #FFFFFF;
-    margin: 40px auto;
-}
-#main__display--cardplay span {
-    margin: auto;
 }
 
-
-#main__user-input {
-    display: flex;
+#wrapper--Button-Holder {
+    display:flex;
     justify-content: center;
-    margin: auto;
-    height: 40px
-
+    margin:20px 0px;
 }
-#main__user-input--inputbar {
-    border: none;
-    border-radius: 15px 0px 0px 15px;
-    width: 720px;
-
-}
-#main__user-input--inputbutton {
-    border:none;
-    border-radius: 0px 15px 15px 0px;
-    width: 125px;
-    background-color: #ffae00;
-    cursor: pointer;
-}
-#main__user-input--inputbutton:hover{  /* fixed */
-    background-color: #f5c764;
+.Start-Button, .Edit-Button{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    margin-left: 4%;
+    margin-right: 4%;   
+    border-color: black;
+    border-width: 3px;
+    box-shadow: 4px 4px 0px black;
 }
 
-#main__display--buttonselect-deck:hover{
-    background-color: rgb(160, 230, 160);
+.Start-Button{
+    width: 129px;
+    height: 46px;
+    background-color: #D9FFCF;
 }
 
-/*modal screen*/
-
-#modal-display {
-    display: none;
+.Start-Button:hover{
+    background-color: #e6ffe0;
+    transition: 0.3s;
 }
+
+.Edit-Button{
+    width: 129px;
+    height: 46px;
+    background-color: #CBECFF;
+}
+
+.Edit-Button:hover{
+    background-color: #dff2fd;
+    transition: 0.3s;
+}
+
+.Deck1 ,.Deck2,.Deck3,.Deck4,.Deck5{
+    z-index: 1;
+    font-family: 'Palanquin Dark', sans-serif;
+    width: 10%; 
+    height: 50%; 
+    background-color: #8898E0;
+    border-color: #6473b9;
+    margin-top: 3%;
+    border-radius: 23px;
+    margin-left: 4%;
+    margin-right: 4%;   
+    color: white;
+    font-size: 20px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.Deck1:hover,.Deck2:hover,.Deck3:hover,.Deck4:hover,.Deck5:hover{
+    background-color: #a0b1fc;
+    border-color: #788be0;
+    transition: 0.3s;
+}
+
+.Deck1:active{
+    background-color: black;
+    transition: 0.3s;
+}
+
